@@ -8,10 +8,20 @@
 
 package org.sosy_lab.cpachecker.cfa;
 
+import static com.google.common.base.Preconditions.checkNotNull;
+
+import com.fasterxml.jackson.annotation.JsonInclude.Include;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.core.JsonFactory;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
+import com.google.common.base.Predicates;
+import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
+import com.google.common.util.concurrent.Uninterruptibles;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.PrintStream;
@@ -19,14 +29,19 @@ import java.io.Writer;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
+import java.util.NavigableMap;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.logging.Level;
 import java.util.stream.Collectors;
+import org.checkerframework.checker.nullness.qual.NonNull;
+import org.checkerframework.checker.nullness.qual.Nullable;
 import org.sosy_lab.common.Concurrency;
 import org.sosy_lab.common.ShutdownNotifier;
 import org.sosy_lab.common.configuration.Configuration;
@@ -43,6 +58,7 @@ import org.sosy_lab.cpachecker.cfa.ast.AFunctionCall;
 import org.sosy_lab.cpachecker.cfa.ast.AIdExpression;
 import org.sosy_lab.cpachecker.cfa.ast.AStatement;
 import org.sosy_lab.cpachecker.cfa.ast.AVariableDeclaration;
+import org.sosy_lab.cpachecker.cfa.ast.AbstractSimpleDeclaration;
 import org.sosy_lab.cpachecker.cfa.ast.FileLocation;
 import org.sosy_lab.cpachecker.cfa.ast.acsl.ACSLParser;
 import org.sosy_lab.cpachecker.cfa.ast.acsl.util.SyntacticBlock;
@@ -52,6 +68,8 @@ import org.sosy_lab.cpachecker.cfa.ast.c.CInitializer;
 import org.sosy_lab.cpachecker.cfa.ast.c.CVariableDeclaration;
 import org.sosy_lab.cpachecker.cfa.ast.java.JDeclaration;
 import org.sosy_lab.cpachecker.cfa.ast.java.JMethodDeclaration;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.SvLibDeclaration;
+import org.sosy_lab.cpachecker.cfa.ast.svlib.SvLibFunctionDeclaration;
 import org.sosy_lab.cpachecker.cfa.export.CFAToPixelsWriter;
 import org.sosy_lab.cpachecker.cfa.export.DOTBuilder;
 import org.sosy_lab.cpachecker.cfa.export.DOTBuilder2;
@@ -64,7 +82,9 @@ import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.cfa.model.FunctionEntryNode;
 import org.sosy_lab.cpachecker.cfa.model.c.CDeclarationEdge;
 import org.sosy_lab.cpachecker.cfa.model.java.JDeclarationEdge;
+import org.sosy_lab.cpachecker.cfa.model.svlib.SvLibDeclarationEdge;
 import org.sosy_lab.cpachecker.cfa.parser.Parsers;
+import org.sosy_lab.cpachecker.cfa.parser.eclipse.c.CParsingFailureRequiringPreprocessingException;
 import org.sosy_lab.cpachecker.cfa.postprocessing.function.AtExitTransformer;
 import org.sosy_lab.cpachecker.cfa.postprocessing.function.CFADeclarationMover;
 import org.sosy_lab.cpachecker.cfa.postprocessing.function.CFASimplifier;
@@ -75,9 +95,11 @@ import org.sosy_lab.cpachecker.cfa.postprocessing.function.ThreadCreateTransform
 import org.sosy_lab.cpachecker.cfa.postprocessing.global.CFACloner;
 import org.sosy_lab.cpachecker.cfa.postprocessing.global.FunctionCallUnwinder;
 import org.sosy_lab.cpachecker.cfa.types.MachineModel;
+import org.sosy_lab.cpachecker.cfa.types.c.CBasicType;
 import org.sosy_lab.cpachecker.cfa.types.c.CComplexType.ComplexTypeKind;
 import org.sosy_lab.cpachecker.cfa.types.c.CDefaults;
 import org.sosy_lab.cpachecker.cfa.types.c.CElaboratedType;
+import org.sosy_lab.cpachecker.cfa.types.c.CSimpleType;
 import org.sosy_lab.cpachecker.cfa.types.c.CStorageClass;
 import org.sosy_lab.cpachecker.cfa.types.c.CType;
 import org.sosy_lab.cpachecker.core.CPAcheckerResult.Result;
@@ -88,13 +110,13 @@ import org.sosy_lab.cpachecker.exceptions.CPAException;
 import org.sosy_lab.cpachecker.exceptions.CParserException;
 import org.sosy_lab.cpachecker.exceptions.JParserException;
 import org.sosy_lab.cpachecker.exceptions.ParserException;
+import org.sosy_lab.cpachecker.exceptions.SvLibParserException;
 import org.sosy_lab.cpachecker.exceptions.UnrecognizedCodeException;
 import org.sosy_lab.cpachecker.util.CFAUtils;
 import org.sosy_lab.cpachecker.util.LiveVariables;
 import org.sosy_lab.cpachecker.util.LoopStructure;
 import org.sosy_lab.cpachecker.util.Pair;
 import org.sosy_lab.cpachecker.util.cwriter.CFAToCTranslator;
-import org.sosy_lab.cpachecker.util.cwriter.CfaToCExporter;
 import org.sosy_lab.cpachecker.util.statistics.StatisticsUtils;
 import org.sosy_lab.cpachecker.util.variableclassification.VariableClassificationBuilder;
 
@@ -109,20 +131,33 @@ public class CFACreator {
   public static final String VALID_C_FUNCTION_NAME_PATTERN = "[_a-zA-Z][_a-zA-Z0-9]*";
   public static final String VALID_JAVA_FUNCTION_NAME_PATTERN = ".*"; // TODO
 
+  private enum PreprocessorUsage {
+    FALSE,
+    TRUE,
+    AUTO
+  }
+
   @Option(
       secure = true,
       name = "parser.usePreprocessor",
       description =
-          "For C files, run the preprocessor on them before parsing. Note that all line numbers"
-              + " printed by CPAchecker will refer to the pre-processed file, not the original"
-              + " input file.")
-  private boolean usePreprocessor = false;
+          "For C files, run an external preprocessor on them before parsing. Note that all line"
+              + " numbers printed by CPAchecker will refer to the pre-processed file, not the"
+              + " original input file. In case auto detection is enabled, the preprocessor will"
+              + " only be used in case the program contains system headers. Furthermore, note that"
+              + " this option only enables an external pre-processor for C files, whose primary"
+              + " responsibility is resolving system headers and includes.We always make use of the"
+              + " built-in pre-processor of the Eclipse CDT parser, which already handles macros"
+              + " and comments.")
+  private PreprocessorUsage usePreprocessor = PreprocessorUsage.AUTO;
 
   @Option(
       secure = true,
       name = "parser.useClang",
       description =
-          "For C files, convert to LLVM IR with clang first and then use the LLVM parser.")
+          "For C files, convert to LLVM IR with clang first and then use the LLVM parser (currently"
+              + " unsupported).")
+  @Deprecated
   private boolean useClang = false;
 
   @Option(
@@ -140,11 +175,13 @@ public class CFACreator {
       secure = true,
       name = "analysis.machineModel",
       description =
-          "the machine model, which determines the sizes of types like int:\n"
-              + "- LINUX32: ILP32 for Linux on 32-bit x86\n"
-              + "- LINUX64: LP64 for Linux on 64-bit x86\n"
-              + "- ARM: ILP32 for Linux on 32-bit ARM\n"
-              + "- ARM64: LP64 for Linux on 64-bit ARM")
+          """
+          the machine model, which determines the sizes of types like int:
+          - LINUX32: ILP32 for Linux on 32-bit x86
+          - LINUX64: LP64 for Linux on 64-bit x86
+          - ARM: ILP32 for Linux on 32-bit ARM
+          - ARM64: LP64 for Linux on 64-bit ARM\
+          """)
   private MachineModel machineModel = MachineModel.LINUX32;
 
   @Option(
@@ -195,14 +232,6 @@ public class CFACreator {
   @FileOption(FileOption.Type.OUTPUT_FILE)
   private Path exportCfaToCFile = Path.of("cfa.c");
 
-  @Option(
-      secure = true,
-      name = "cfa.exportToC.stayCloserToInput",
-      description =
-          "produce C programs more similar to the input program"
-              + "\n(only possible for a single input file)")
-  private boolean exportCfaToCStayingCloserToInput = false;
-
   @Option(secure = true, name = "cfa.callgraph.export", description = "dump a simple call graph")
   private boolean exportFunctionCalls = true;
 
@@ -226,6 +255,18 @@ public class CFACreator {
 
   @Option(
       secure = true,
+      name = "cfa.pathForExportingVariablesInScopeWithTheirType",
+      description =
+          "the path to export a json mapping which for each"
+              + " location contains the variables"
+              + " in scope and their type. Please be aware that this "
+              + "is **not** a stable interface and the output format of "
+              + "the file may change in future versions.")
+  @FileOption(FileOption.Type.OUTPUT_FILE)
+  private Path pathForExportingVariablesInScopeWithTheirType = null;
+
+  @Option(
+      secure = true,
       name = "cfa.pixelGraphicFile",
       description =
           "Export CFA as pixel graphic to the given file name. The suffix is added"
@@ -233,7 +274,7 @@ public class CFACreator {
               + " to the value of option pixelgraphic.export.format"
               + "If set to 'null', no pixel graphic is exported.")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path exportCfaPixelFile = Path.of("cfaPixel");
+  private Path exportCfaPixelFile = null;
 
   @Option(
       secure = true,
@@ -289,16 +330,18 @@ public class CFACreator {
       name = "cfa.findLiveVariables",
       description =
           "By enabling this option the variables that are live are"
-              + " computed for each edge of the cfa. Live means that their value"
+              + " computed for each edge of the CFA. Live means that their value"
               + " is read later on.")
   private boolean findLiveVariables = false;
 
   @Option(
       secure = true,
       description =
-          "Programming language of the input program. If not given explicitly, "
-              + "auto-detection will occur")
-  // keep option name in sync with {@link CPAMain#language}, value might differ
+          "Programming language of the input program. If not given explicitly, auto-detection"
+              + " will occur. LLVM IR is currently unsupported as input (cf."
+              + " https://gitlab.com/sosy-lab/software/cpachecker/-/issues/1356).")
+  // keep option name in sync with {@link CPAMain#language} and {@link
+  // ConfigurationFileChecks.OptionsWithSpecialHandlingInTest#language}, value might differ
   private Language language = Language.C;
 
   private Language inputLanguage = Language.C;
@@ -309,13 +352,17 @@ public class CFACreator {
 
   private final LogManager logger;
   private final Parser parser;
+  // Contains a parser that is used as a backup in case the main parser failed due to preprocessing
+  // Only applies when verifying C programs with auto-detected preprocessing.
+  private Optional<Parser> backupParserForPreprocessing = Optional.empty();
   private final ShutdownNotifier shutdownNotifier;
   private static final String EXAMPLE_JAVA_METHOD_NAME =
       """
       Please note that a method has to be given in the following notation:
       <ClassName>_<MethodName>_<ParameterTypes>.
       Example: pack1.Car_drive_int_Car
-      for the method drive(int speed, Car car) in the class Car.""";
+      for the method drive(int speed, Car car) in the class Car.
+      """;
 
   private static class CFACreatorStatistics implements Statistics {
 
@@ -330,6 +377,8 @@ public class CFACreator {
     private final Timer astStructureTime = new Timer();
     private final List<Statistics> statisticsCollection;
     private final LogManager logger;
+
+    private @Nullable Thread exportThread;
 
     private CFACreatorStatistics(LogManager pLogger) {
       logger = pLogger;
@@ -352,6 +401,11 @@ public class CFACreator {
       out.println("    Time for loop structure:  " + loopStructureTime);
       out.println("    Time for AST structure:   " + astStructureTime);
 
+      if (exportThread != null) {
+        // If export is still running we should wait such that statistics are correct
+        // and we don't kill the export once CPAchecker terminates.
+        Uninterruptibles.joinUninterruptibly(exportThread);
+      }
       if (exportTime.getNumberOfIntervals() > 0) {
         out.println("    Time for CFA export:      " + exportTime);
       }
@@ -372,29 +426,29 @@ public class CFACreator {
   private final CFACreatorStatistics stats;
   private final Configuration config;
 
-  public CFACreator(Configuration config, LogManager logger, ShutdownNotifier pShutdownNotifier)
+  public CFACreator(Configuration pConfig, LogManager pLogger, ShutdownNotifier pShutdownNotifier)
       throws InvalidConfigurationException {
 
-    config.inject(this);
+    pConfig.inject(this);
 
-    this.config = config;
-    this.logger = logger;
+    this.config = pConfig;
+    this.logger = pLogger;
     shutdownNotifier = pShutdownNotifier;
-    stats = new CFACreatorStatistics(logger);
+    stats = new CFACreatorStatistics(pLogger);
 
     stats.parserInstantiationTime.start();
     String regExPattern;
     inputLanguage = language;
     switch (language) {
-      case JAVA:
+      case JAVA -> {
         regExPattern = "^" + VALID_JAVA_FUNCTION_NAME_PATTERN + "$";
         if (!mainFunctionName.matches(regExPattern)) {
           throw new InvalidConfigurationException(
               "Entry function for java programs must match pattern " + regExPattern);
         }
-        parser = Parsers.getJavaParser(logger, config, mainFunctionName);
-        break;
-      case C:
+        parser = Parsers.getJavaParser(pLogger, pConfig, mainFunctionName);
+      }
+      case C -> {
         regExPattern = "^" + VALID_C_FUNCTION_NAME_PATTERN + "$";
         if (!mainFunctionName.matches(regExPattern)) {
           throw new InvalidConfigurationException(
@@ -402,36 +456,50 @@ public class CFACreator {
         }
         CParser outerParser =
             CParser.Factory.getParser(
-                logger, CParser.Factory.getOptions(config), machineModel, shutdownNotifier);
+                pLogger, CParser.Factory.getOptions(pConfig), machineModel, shutdownNotifier);
 
-        outerParser =
-            new CParserWithLocationMapper(
-                config, logger, outerParser, readLineDirectives || usePreprocessor || useClang);
+        if (usePreprocessor == PreprocessorUsage.TRUE) {
+          // always preprocess, always read line directives
+          outerParser =
+              new CParserWithPreprocessor(
+                  new CParserWithLocationMapper(pConfig, pLogger, outerParser, true),
+                  new CPreprocessor(pConfig, pLogger, machineModel));
 
-        if (usePreprocessor) {
-          CPreprocessor preprocessor = new CPreprocessor(config, logger);
-          outerParser = new CParserWithPreprocessor(outerParser, preprocessor);
+        } else {
+          // on first try, do not preprocess, read line directives only if explicitly requested
+          outerParser =
+              new CParserWithLocationMapper(
+                  pConfig, pLogger, outerParser, readLineDirectives || useClang);
+
+          if (usePreprocessor == PreprocessorUsage.AUTO) {
+            // on second try, always preprocess, always read line directives
+            backupParserForPreprocessing =
+                Optional.of(
+                    new CParserWithPreprocessor(
+                        new CParserWithLocationMapper(pConfig, pLogger, outerParser, true),
+                        new CPreprocessor(pConfig, pLogger, machineModel)));
+          }
         }
 
         if (useClang) {
-          if (usePreprocessor) {
-            logger.log(
+          if (usePreprocessor != PreprocessorUsage.FALSE) {
+            pLogger.log(
                 Level.WARNING, "Option --preprocess is ignored when used with option -clang");
           }
-          ClangPreprocessor clang = new ClangPreprocessor(config, logger);
-          parser = LlvmParserWithClang.Factory.getParser(clang, logger, machineModel);
+          parser = Parsers.getLlvmClangParser(pConfig, pLogger, machineModel);
         } else {
           parser = outerParser;
         }
-
-        break;
-      case LLVM:
-        parser = Parsers.getLlvmParser(logger, machineModel);
-        language = Language.C; // After parsing we will have a CFA representing C code
-        break;
-
-      default:
-        throw new AssertionError();
+      }
+      case LLVM -> {
+        parser = Parsers.getLlvmParser(pLogger, machineModel);
+        language = Language.C;
+        // After parsing, we will have a CFA representing C code
+      }
+      case SVLIB -> {
+        parser = Parsers.getSvLibParser(logger, config, machineModel, shutdownNotifier);
+      }
+      default -> throw new AssertionError();
     }
 
     stats.parsingTime = parser.getParseTime();
@@ -449,7 +517,7 @@ public class CFACreator {
    *     configuration is not found.
    * @throws ParserException If the parser or the CFA builder cannot handle the C code.
    */
-  public CFA parseSourceAndCreateCFA(String program)
+  public ImmutableCFA parseSourceAndCreateCFA(String program)
       throws InvalidConfigurationException, ParserException, InterruptedException {
 
     stats.totalTime.start();
@@ -458,9 +526,7 @@ public class CFACreator {
       FunctionEntryNode mainFunction = parseResult.functions().get(mainFunctionName);
       assert mainFunction != null : "program lacks main function.";
 
-      CFA cfa = createCFA(parseResult, mainFunction);
-
-      return cfa;
+      return createCFA(parseResult, mainFunction);
     } finally {
       stats.totalTime.stop();
     }
@@ -476,7 +542,7 @@ public class CFACreator {
    * @throws IOException If an I/O error occurs.
    * @throws ParserException If the parser or the CFA builder cannot handle the C code.
    */
-  public CFA parseFileAndCreateCFA(List<String> sourceFiles)
+  public ImmutableCFA parseFileAndCreateCFA(List<String> sourceFiles)
       throws InvalidConfigurationException, IOException, ParserException, InterruptedException {
 
     Preconditions.checkArgument(
@@ -486,26 +552,41 @@ public class CFACreator {
     try {
       // FIRST, parse file(s) and create CFAs for each function
       logger.log(Level.FINE, "Starting parsing of file(s)");
-
-      final ParseResult c = parseToCFAs(sourceFiles);
+      ParseResult c;
+      try {
+        c = parseToCFAs(sourceFiles);
+      } catch (CParsingFailureRequiringPreprocessingException e) {
+        if (backupParserForPreprocessing.isPresent()) {
+          logger.logDebugException(
+              e,
+              "Parsing failed with preprocessing disabled, trying "
+                  + "backup parser with preprocessing enabled");
+          logger.log(
+              Level.INFO,
+              "Parsing failed with preprocessing using an external "
+                  + "pre-processor disabled, now trying to parse "
+                  + "the code with usage of an external pre-processor.");
+          c = backupParserForPreprocessing.orElseThrow().parseFiles(sourceFiles);
+        } else {
+          throw e;
+        }
+      }
 
       logger.log(Level.FINE, "Parser Finished");
 
       FunctionEntryNode mainFunction;
 
       switch (language) {
-        case JAVA:
+        case JAVA -> {
           mainFunction = getJavaMainMethod(sourceFiles, mainFunctionName, c.functions());
           checkForAmbiguousMethod(mainFunction, mainFunctionName, c.functions());
-          break;
-        case C:
-          mainFunction = getCMainFunction(sourceFiles, c.functions());
-          break;
-        default:
-          throw new AssertionError();
+        }
+        case C -> mainFunction = getCMainFunction(sourceFiles, c.functions());
+        case SVLIB -> mainFunction = getSvLibMainFunction(c.functions());
+        default -> throw new AssertionError();
       }
 
-      CFA cfa = createCFA(c, mainFunction);
+      ImmutableCFA cfa = createCFA(c, mainFunction);
 
       if (!commentPositions.isEmpty()) {
         SyntacticBlockStructureBuilder blockStructureBuilder =
@@ -521,6 +602,12 @@ public class CFACreator {
     } finally {
       stats.totalTime.stop();
     }
+  }
+
+  private FunctionEntryNode getSvLibMainFunction(
+      NavigableMap<String, FunctionEntryNode> pFunctions) {
+    String mainFunctioName = SvLibFunctionDeclaration.mainFunctionDeclaration().getName();
+    return pFunctions.get(mainFunctioName);
   }
 
   @VisibleForTesting
@@ -563,7 +650,7 @@ public class CFACreator {
                 "Method " + mainFunction + " not found.\n" + EXAMPLE_JAVA_METHOD_NAME));
   }
 
-  private CFA createCFA(ParseResult pParseResult, FunctionEntryNode pMainFunction)
+  private ImmutableCFA createCFA(ParseResult pParseResult, FunctionEntryNode pMainFunction)
       throws InvalidConfigurationException, InterruptedException, ParserException {
 
     FunctionEntryNode mainFunction = pMainFunction;
@@ -630,7 +717,7 @@ public class CFACreator {
     // (currently no such post-processings exist)
 
     // SIXTH, get information about the CFA,
-    // the cfa should not be modified after this line.
+    // the CFA should not be modified after this line.
 
     // Get information about variables, needed for some analysis.
     if (language == Language.C) {
@@ -657,6 +744,10 @@ public class CFACreator {
       cfa.setAstCfaRelation(pParseResult.astStructure().orElseThrow());
     }
 
+    if (pParseResult.svLibCfaMetadata().isPresent()) {
+      cfa.setSvLibCfaMetadata(pParseResult.svLibCfaMetadata().orElseThrow());
+    }
+
     final ImmutableCFA immutableCFA = cfa.immutableCopy();
 
     if (pParseResult.blocks().isPresent() && pParseResult.commentLocations().isPresent()) {
@@ -673,7 +764,8 @@ public class CFACreator {
         || ((exportFunctionCallsFile != null) && exportFunctionCalls)
         || ((exportFunctionCallsUsedFile != null) && exportFunctionCalls)
         || (exportCfaPixelFile != null)
-        || (exportCfaToCFile != null && exportCfaToC)) {
+        || (exportCfaToCFile != null && exportCfaToC)
+        || (pathForExportingVariablesInScopeWithTheirType != null)) {
       exportCFAAsync(immutableCFA);
     }
 
@@ -692,12 +784,9 @@ public class CFACreator {
     final ParseResult parseResult = parser.parseString(Path.of("test"), program);
     if (parseResult.isEmpty()) {
       switch (language) {
-        case JAVA:
-          throw new JParserException("No methods found in program");
-        case C:
-          throw new CParserException("No functions found in program");
-        default:
-          throw new AssertionError();
+        case JAVA -> throw new JParserException("No methods found in program");
+        case C -> throw new CParserException("No functions found in program");
+        default -> throw new AssertionError();
       }
     }
 
@@ -723,12 +812,13 @@ public class CFACreator {
 
     if (parseResult.isEmpty()) {
       switch (language) {
-        case JAVA:
-          throw new JParserException("No methods found in program");
-        case C:
-          throw new CParserException("No functions found in program");
-        default:
-          throw new AssertionError();
+        case JAVA -> throw new JParserException("No methods found in program");
+        case C -> throw new CParserException("No functions found in program");
+        case SVLIB ->
+            throw new SvLibParserException(
+                "No verification call found in the SV-LIB program. Please check the syntax of your"
+                    + " SV-LIB program.");
+        default -> throw new AssertionError();
       }
     }
 
@@ -813,14 +903,13 @@ public class CFACreator {
     // for all possible edges
     for (CFAEdge edge : CFAUtils.allEdges(pCfa)) {
       // check for creation of new thread
-      if (edge instanceof AStatementEdge) {
-        final AStatement statement = ((AStatementEdge) edge).getStatement();
-        if (statement instanceof AFunctionCall) {
+      if (edge instanceof AStatementEdge aStatementEdge) {
+        final AStatement statement = aStatementEdge.getStatement();
+        if (statement instanceof AFunctionCall aFunctionCall) {
           final AExpression functionNameExp =
-              ((AFunctionCall) statement).getFunctionCallExpression().getFunctionNameExpression();
-          if (functionNameExp instanceof AIdExpression) {
-            if (ThreadingTransferRelation.THREAD_START.equals(
-                ((AIdExpression) functionNameExp).getName())) {
+              aFunctionCall.getFunctionCallExpression().getFunctionNameExpression();
+          if (functionNameExp instanceof AIdExpression aIdExpression) {
+            if (ThreadingTransferRelation.THREAD_START.equals(aIdExpression.getName())) {
               return true;
             }
           }
@@ -966,7 +1055,7 @@ public class CFACreator {
 
     } else if (sourceFiles.size() == 1) {
       // get the AAA part out of a filename like test/program/AAA.cil.c
-      Path path = Path.of(sourceFiles.get(0)).getFileName();
+      Path path = Path.of(sourceFiles.getFirst()).getFileName();
       if (path != null) {
         String filename = path.toString(); // remove directory
 
@@ -1007,7 +1096,7 @@ public class CFACreator {
     }
 
     if (cfa.getLanguage() == Language.C) {
-      addDefaultInitializers(globalVars);
+      addDefaultInitializers(cfa.getMachineModel(), globalVars);
     } else {
       // TODO addDefaultInitializerForJava
     }
@@ -1046,6 +1135,13 @@ public class CFACreator {
                 new CDeclarationEdge(rawSignature, d.getFileLocation(), cur, n, (CDeclaration) d);
             case JAVA ->
                 new JDeclarationEdge(rawSignature, d.getFileLocation(), cur, n, (JDeclaration) d);
+            case SVLIB ->
+                new SvLibDeclarationEdge(
+                    Objects.requireNonNull(rawSignature),
+                    d.getFileLocation(),
+                    cur,
+                    n,
+                    (SvLibDeclaration) d);
             default -> throw new AssertionError("unknown language");
           };
       CFACreationUtils.addEdgeUnconditionallyToCFA(newEdge);
@@ -1069,7 +1165,8 @@ public class CFACreator {
    *
    * @param globalVars a list with all global declarations
    */
-  private static void addDefaultInitializers(List<Pair<ADeclaration, String>> globalVars) {
+  private static void addDefaultInitializers(
+      MachineModel pMachineModel, List<Pair<ADeclaration, String>> globalVars) {
     // first, collect all variables which do have an explicit initializer
     Set<String> initializedVariables = new HashSet<>();
     for (Pair<ADeclaration, String> p : globalVars) {
@@ -1112,9 +1209,9 @@ public class CFACreator {
           // (e.g., "struct s;"), we cannot produce an initializer.
           // (Although there shouldn't be any variables of this type anyway.)
           CType type = v.getType().getCanonicalType();
-          if (!(type instanceof CElaboratedType)
-              || (((CElaboratedType) type).getKind() == ComplexTypeKind.ENUM)) {
-            CInitializer initializer = CDefaults.forType(type, v.getFileLocation());
+          if (!(type instanceof CElaboratedType cElaboratedType)
+              || (cElaboratedType.getKind() == ComplexTypeKind.ENUM)) {
+            CInitializer initializer = CDefaults.forType(pMachineModel, type, v.getFileLocation());
             v.addInitializer(initializer);
             v =
                 new CVariableDeclaration(
@@ -1138,7 +1235,95 @@ public class CFACreator {
   private void exportCFAAsync(final CFA cfa) {
     // Execute asynchronously, this may take several seconds for large programs on slow disks.
     // This is safe because we don't modify the CFA from this point on.
-    Concurrency.newThread("CFA export thread", () -> exportCFA(cfa)).start();
+    stats.exportThread = Concurrency.newThread("CFA export thread", () -> exportCFA(cfa));
+    stats.exportThread.start();
+  }
+
+  /**
+   * A helper class to have some information about the type of a variable at a certain point in the
+   * scope
+   */
+  private record AVariableDeclarationExchange(
+      @JsonProperty("name") @NonNull String name,
+      @JsonProperty("simpleType") @NonNull CBasicType simpleType) {
+
+    AVariableDeclarationExchange {
+      checkNotNull(name);
+      checkNotNull(simpleType);
+    }
+  }
+
+  /**
+   * Export a json file containing information about what the types of variables are at a certain
+   * location in the program.
+   *
+   * @param pCFA the CFA to export the information from
+   */
+  private void exportTypeInformationForEachVariable(CFA pCFA) {
+    // This is a map from a filename, line and column to a set of variable names with their types
+    // at that location.
+    // To be able to export this to json we need to separate this mapping from a triple to a set
+    // into multiple maps each one with a single key.
+    Map<String, Map<Integer, Map<Integer, Set<AVariableDeclarationExchange>>>>
+        locationToVariablesInScope = new HashMap<>();
+
+    for (CFANode node : pCFA.nodes()) {
+      Optional<FileLocation> statementContainingNode =
+          pCFA.getAstCfaRelation().getStatementFileLocationForNode(node);
+      if (statementContainingNode.isEmpty()) {
+        continue;
+      }
+
+      Optional<FluentIterable<AbstractSimpleDeclaration>> declarationAtNode =
+          pCFA.getAstCfaRelation().getVariablesAndParametersInScope(node);
+
+      if (declarationAtNode.isEmpty()) {
+        continue;
+      }
+
+      Set<AVariableDeclarationExchange> variables =
+          declarationAtNode
+              .orElseThrow()
+              .filter(Predicates.notNull())
+              .transform(
+                  declaration ->
+                      declaration.getType() instanceof CSimpleType pCSimpleType
+                          ? new AVariableDeclarationExchange(
+                              declaration.getOrigName(), pCSimpleType.getType())
+                          : null)
+              .toSet();
+
+      // create a new map if it does not exist
+      FileLocation statementFileLocation = statementContainingNode.orElseThrow();
+      String filename = statementFileLocation.getFileName().toString();
+      Integer lineNumber = statementFileLocation.getStartingLineNumber();
+      Integer columnNumber = statementFileLocation.getStartColumnInLine();
+      locationToVariablesInScope.putIfAbsent(filename, new HashMap<>());
+      locationToVariablesInScope.get(filename).putIfAbsent(lineNumber, new HashMap<>());
+      locationToVariablesInScope
+          .get(filename)
+          .get(lineNumber)
+          .putIfAbsent(columnNumber, new HashSet<>());
+      locationToVariablesInScope.get(filename).get(lineNumber).get(columnNumber).addAll(variables);
+    }
+
+    ObjectMapper mapper = new ObjectMapper(JsonFactory.builder().build());
+    mapper.setSerializationInclusion(Include.NON_NULL);
+
+    try (Writer writer =
+        IO.openOutputFile(
+            pathForExportingVariablesInScopeWithTheirType, Charset.defaultCharset())) {
+      mapper.writeValue(writer, locationToVariablesInScope);
+    } catch (JsonProcessingException e) {
+      throw new RuntimeException("Could not serialize the variables in scope to json.", e);
+    } catch (IOException e) {
+      logger.logfUserException(
+          Level.WARNING,
+          e,
+          "exporting information about what variables are in scope at each statement in the CFA"
+              + " to %s  failed due to not being able to write to the output file.",
+          pathForExportingVariablesInScopeWithTheirType);
+    }
   }
 
   private void exportCFA(final CFA cfa) {
@@ -1193,27 +1378,17 @@ public class CFACreator {
 
     if (exportCfaToC && exportCfaToCFile != null) {
       try {
-        String code;
-        if (exportCfaToCStayingCloserToInput && cfa.getFileNames().size() == 1) {
-          code = new CfaToCExporter(logger, config, shutdownNotifier).exportCfa(cfa);
-        } else {
-          if (exportCfaToCStayingCloserToInput) {
-            logger.log(
-                Level.INFO,
-                "Using the regular CFA-to-C exporter (staying closer to the input program is only"
-                    + " possible for a single input file)");
-          }
-          code = new CFAToCTranslator(config).translateCfa(cfa);
-        }
+        String code = new CFAToCTranslator(config).translateCfa(cfa);
         try (Writer writer = IO.openOutputFile(exportCfaToCFile, Charset.defaultCharset())) {
           writer.write(code);
         }
-      } catch (CPAException
-          | IOException
-          | InterruptedException
-          | InvalidConfigurationException e) {
+      } catch (CPAException | IOException | InvalidConfigurationException e) {
         logger.logUserException(Level.WARNING, e, "Could not write CFA to C file.");
       }
+    }
+
+    if (pathForExportingVariablesInScopeWithTheirType != null) {
+      exportTypeInformationForEachVariable(cfa);
     }
 
     stats.exportTime.stop();
