@@ -14,7 +14,6 @@ import com.google.common.base.CharMatcher;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.TreeMultimap;
-import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -89,21 +88,23 @@ import org.sosy_lab.cpachecker.cfa.types.c.CPointerType;
 import org.sosy_lab.cpachecker.cfa.types.c.CSimpleType;
 import org.sosy_lab.cpachecker.cfa.types.c.CStorageClass;
 import org.sosy_lab.cpachecker.cfa.types.c.CType;
+import org.sosy_lab.cpachecker.cfa.types.c.CTypeQualifiers;
 import org.sosy_lab.cpachecker.cfa.types.c.CVoidType;
 import org.sosy_lab.cpachecker.exceptions.UnrecognizedCodeException;
 import org.sosy_lab.cpachecker.util.CFATraversal;
-import org.sosy_lab.cpachecker.util.CFAUtils;
 import org.sosy_lab.cpachecker.util.Pair;
+import org.sosy_lab.cpachecker.util.floatingpoint.FloatValue;
 import org.sosy_lab.llvm_j.BasicBlock;
 import org.sosy_lab.llvm_j.Function;
 import org.sosy_lab.llvm_j.LLVMException;
 import org.sosy_lab.llvm_j.Module;
 import org.sosy_lab.llvm_j.TypeRef;
 import org.sosy_lab.llvm_j.Value;
+import org.sosy_lab.llvm_j.Value.IntPredicate;
 import org.sosy_lab.llvm_j.Value.OpCode;
 
 /** CFA builder for LLVM IR. Metadata stored in the LLVM IR file is ignored. */
-public class CFABuilder {
+class CFABuilder {
   // TODO: Thread Local Storage Model: May be important for concurrency
   // TODO: Aliases (@a = %b) and IFuncs (@a = ifunc @..)
 
@@ -142,7 +143,7 @@ public class CFABuilder {
   protected TreeMultimap<String, CFANode> cfaNodes;
   protected List<Pair<ADeclaration, String>> globalDeclarations;
 
-  public CFABuilder(final LogManager pLogger, final MachineModel pMachineModel) {
+  CFABuilder(final LogManager pLogger, final MachineModel pMachineModel) {
     logger = pLogger;
     machineModel = pMachineModel;
 
@@ -159,14 +160,14 @@ public class CFABuilder {
     globalDeclarations = new ArrayList<>();
   }
 
-  public ParseResult build(final Module pModule, final Path pFilename) throws LLVMException {
+  ParseResult build(final Module pModule, final Path pFilename) throws LLVMException {
     visit(pModule, pFilename);
     List<Path> input_file = ImmutableList.of(pFilename);
 
     return new ParseResult(functions, cfaNodes, globalDeclarations, input_file);
   }
 
-  public void visit(final Module pItem, final Path pFileName) throws LLVMException {
+  void visit(final Module pItem, final Path pFileName) throws LLVMException {
     if (pItem.getFirstFunction() == null) {
       return;
     }
@@ -298,10 +299,10 @@ public class CFABuilder {
         CFATraversal.dfs().collectNodesReachableFromTo(pBlock.getEntryNode(), pBlock.getExitNode());
 
     for (CFANode toRemove : blockNodes) {
-      for (CFAEdge enteringEdge : CFAUtils.allEnteringEdges(toRemove)) {
+      for (CFAEdge enteringEdge : toRemove.getAllEnteringEdges()) {
         enteringEdge.getPredecessor().removeLeavingEdge(enteringEdge);
       }
-      for (CFAEdge leavingEdge : CFAUtils.allLeavingEdges(toRemove)) {
+      for (CFAEdge leavingEdge : toRemove.getAllLeavingEdges()) {
         leavingEdge.getSuccessor().removeEnteringEdge(leavingEdge);
       }
     }
@@ -376,13 +377,12 @@ public class CFABuilder {
 
       int succNum = terminatorInst.getNumSuccessors();
       if (succNum == 0) {
-        continue;
+        // nothing to do
       } else if (succNum == 1) {
         BasicBlock succ = terminatorInst.getSuccessor(0);
         CFALabelNode label = (CFALabelNode) pBasicBlocks.get(succ.hashCode()).getEntryNode();
 
         addEdge(new BlankEdge("(goto)", FileLocation.DUMMY, brNode, label, "(goto)"));
-        continue;
       } else if (terminatorInst.isBranchInst()) {
         // get the operands and add branching edges
         CExpression conditionForElse = getBranchConditionForElse(terminatorInst, pFileName);
@@ -498,7 +498,7 @@ public class CFABuilder {
 
     for (Value i : pItem) {
       if (i.isDbgInfoIntrinsic() || i.isDbgDeclareInst()) {
-        continue;
+        // nothing to do
 
       } else if (i.isSelectInst()) {
         CDeclaration decl = (CDeclaration) getAssignedVarDeclaration(i, funcName, null, pFileName);
@@ -519,11 +519,11 @@ public class CFABuilder {
         CExpression conditionForElse = getBranchConditionForElse(condition, pFileName);
         CExpression trueValue = getExpression(valueIf, ifType, pFileName);
         CStatement trueAssignment =
-            (CStatement) getAssignStatement(i, trueValue, funcName, pFileName).get(0);
+            (CStatement) getAssignStatement(i, trueValue, funcName, pFileName).getFirst();
         // we can use ifType again, since ifType == elseType for `select` instruction
         CExpression falseValue = getExpression(valueElse, ifType, pFileName);
         CStatement falseAssignment =
-            (CStatement) getAssignStatement(i, falseValue, funcName, pFileName).get(0);
+            (CStatement) getAssignStatement(i, falseValue, funcName, pFileName).getFirst();
 
         CFANode trueNode = newNode(pFunction);
         CFANode falseNode = newNode(pFunction);
@@ -593,16 +593,16 @@ public class CFABuilder {
         for (CAstNode expr : expressions) {
           FileLocation exprLocation = expr.getFileLocation();
           // build an edge with this expression over it
-          if (expr instanceof CDeclaration) {
+          if (expr instanceof CDeclaration cDeclaration) {
             curNode = newNode(pFunction);
             addEdge(
                 new CDeclarationEdge(
-                    expr.toASTString(), exprLocation, prevNode, curNode, (CDeclaration) expr));
-          } else if (expr instanceof CReturnStatement) {
+                    expr.toASTString(), exprLocation, prevNode, curNode, cDeclaration));
+          } else if (expr instanceof CReturnStatement cReturnStatement) {
             curNode = exitNode;
             addEdge(
                 new CReturnStatementEdge(
-                    i.toString(), (CReturnStatement) expr, exprLocation, prevNode, exitNode));
+                    i.toString(), cReturnStatement, exprLocation, prevNode, exitNode));
           } else if (i.isUnreachableInst()) {
             curNode = new CFATerminationNode(pFunction);
             addNode(funcName, curNode);
@@ -630,16 +630,16 @@ public class CFABuilder {
     private CFANode entryNode;
     private CFANode exitNode;
 
-    public BasicBlockInfo(CFANode entry, CFANode exit) {
+    BasicBlockInfo(CFANode entry, CFANode exit) {
       entryNode = entry;
       exitNode = exit;
     }
 
-    public CFANode getEntryNode() {
+    CFANode getEntryNode() {
       return entryNode;
     }
 
-    public CFANode getExitNode() {
+    CFANode getExitNode() {
       return exitNode;
     }
 
@@ -716,8 +716,6 @@ public class CFABuilder {
       throw new LLVMException(
           "Program contains PHI nodes, but they are not supported by CPAchecker, yet."
               + "Please remove them with `opt -reg2mem $PROG`");
-    } else if (pItem.isInvokeInst()) {
-      throw new UnsupportedOperationException();
     } else {
       throw new UnsupportedOperationException();
     }
@@ -957,44 +955,37 @@ public class CFABuilder {
   private CExpression createFromOpCode(
       final Value pItem, final Path pFileName, final OpCode pOpCode) throws LLVMException {
 
-    switch (pOpCode) {
-      // Arithmetic operations
-      case Add:
-      case FAdd:
-      case Sub:
-      case FSub:
-      case Mul:
-      case FMul:
-      case UDiv:
-      case SDiv:
-      case FDiv:
-      case URem:
-      case SRem:
-      case FRem:
-      case Shl:
-      case LShr:
-      case AShr:
-      case And:
-      case Or:
-      case Xor:
-        return createFromArithmeticOp(pItem, pOpCode, pFileName);
-
-      case GetElementPtr:
-        return createGetElementPtrExp(pItem, pFileName);
-      case BitCast:
-        return createBitcast(pItem, pFileName);
-
-      case PtrToInt:
-      case IntToPtr:
-        return new CCastExpression(
-            getLocation(pItem, pFileName),
-            typeConverter.getCType(pItem),
-            getExpression(
-                pItem.getOperand(0), typeConverter.getCType(pItem.getOperand(0)), pFileName));
-
-      default:
-        throw new UnsupportedOperationException(pOpCode.toString());
-    }
+    return switch (pOpCode) {
+      case Add,
+          FAdd,
+          Sub,
+          FSub,
+          Mul,
+          FMul,
+          UDiv,
+          SDiv,
+          FDiv,
+          URem,
+          SRem,
+          FRem,
+          Shl,
+          LShr,
+          AShr,
+          And,
+          Or,
+          Xor ->
+          // Arithmetic operations
+          createFromArithmeticOp(pItem, pOpCode, pFileName);
+      case GetElementPtr -> createGetElementPtrExp(pItem, pFileName);
+      case BitCast -> createBitcast(pItem, pFileName);
+      case PtrToInt, IntToPtr ->
+          new CCastExpression(
+              getLocation(pItem, pFileName),
+              typeConverter.getCType(pItem),
+              getExpression(
+                  pItem.getOperand(0), typeConverter.getCType(pItem.getOperand(0)), pFileName));
+      default -> throw new UnsupportedOperationException(pOpCode.toString());
+    };
   }
 
   private CExpression createBitcast(Value pItem, Path pFileName) throws LLVMException {
@@ -1027,80 +1018,57 @@ public class CFABuilder {
     logger.log(Level.FINE, "Getting id expression for operand 2");
     CExpression operand2Exp = getExpression(operand2, op2type, pFileName);
 
-    CBinaryExpression.BinaryOperator operation;
-    switch (pOpCode) {
-      case Add:
-      case FAdd:
-        operation = BinaryOperator.PLUS;
-        break;
-      case Sub:
-      case FSub:
-        operation = BinaryOperator.MINUS;
-        break;
-      case Mul:
-      case FMul:
-        operation = BinaryOperator.MULTIPLY;
-        break;
-      case UDiv:
-      case SDiv:
-      case FDiv:
-        // TODO: Respect unsigned and signed divide
-        operation = BinaryOperator.DIVIDE;
-        break;
-      case URem:
-      case SRem:
-      case FRem:
-        // TODO: Respect unsigned and signed modulo
-        operation = BinaryOperator.MODULO;
-        break;
-      case Shl: // Shift left
-        operation = BinaryOperator.SHIFT_LEFT;
-        break;
-      case LShr: // Logical shift right
-        // GNU C performs a logical shift for unsigned types
-        op1type =
-            typeConverter.getCType(
-                operand1.typeOf(), /* isUnsigned= */ true, operand1.isConstant());
-        operand1Exp = castToExpectedType(operand1Exp, op1type, getLocation(pItem, pFileName));
-      // $FALL-THROUGH$
-      case AShr: // Arithmetic shift right
-        if (!(isIntegerType(op1type) && isIntegerType(op2type))) {
-          throw new UnsupportedOperationException(
-              "Right shifts are only supported for integer types, but operands were "
-                  + op1type
-                  + " and "
-                  + op2type);
-        }
-        if (operand2.isConstantInt()) {
-          long op2value = operand2.constIntGetSExtValue();
-          int bitwidthOp1 = operand1.typeOf().getIntTypeWidth();
-          if (op2value < 0 || op2value >= bitwidthOp1) {
-            throw new LLVMException("Shift count is negative or >= width of type");
+    CBinaryExpression.BinaryOperator operation =
+        switch (pOpCode) {
+          case Add, FAdd -> BinaryOperator.PLUS;
+          case Sub, FSub -> BinaryOperator.MINUS;
+          case Mul, FMul -> BinaryOperator.MULTIPLY;
+          case UDiv, SDiv, FDiv ->
+              BinaryOperator.DIVIDE; // TODO: Respect unsigned and signed divide
+          case URem, SRem, FRem ->
+              BinaryOperator.REMAINDER; // TODO: Respect unsigned and signed modulo
+          case Shl -> BinaryOperator.SHIFT_LEFT;
+          case LShr, AShr -> {
+            // Logical shift right
+            // Arithmetic shift right
+            if (!(isIntegerType(op1type) && isIntegerType(op2type))) {
+              throw new UnsupportedOperationException(
+                  "Right shifts are only supported for integer types, but operands were "
+                      + op1type
+                      + " and "
+                      + op2type);
+            }
+            if (operand2.isConstantInt()) {
+              long op2value = operand2.constIntGetSExtValue();
+              int bitwidthOp1 = operand1.typeOf().getIntTypeWidth();
+              if (op2value < 0 || op2value >= bitwidthOp1) {
+                throw new LLVMException("Shift count is negative or >= width of type");
+              }
+            }
+
+            if (pOpCode == OpCode.LShr) {
+              // GNU C performs a logical shift for unsigned types
+              op1type =
+                  typeConverter.getCType(
+                      operand1.typeOf(), /* isUnsigned= */ true, operand1.isConstant());
+              operand1Exp = castToExpectedType(operand1Exp, op1type, getLocation(pItem, pFileName));
+            }
+
+            // operand2 should always be treated as an unsigned value
+            op2type =
+                typeConverter.getCType(
+                    operand2.typeOf(), /* isUnsigned= */ true, operand2.isConstant());
+            operand2Exp = castToExpectedType(operand2Exp, op2type, getLocation(pItem, pFileName));
+
+            // calculate the shift with the signedness of op1type
+            internalExpressionType = machineModel.applyIntegerPromotion(op1type);
+            yield BinaryOperator.SHIFT_RIGHT;
           }
-        }
-
-        // operand2 should always be treated as an unsigned value
-        op2type =
-            typeConverter.getCType(
-                operand2.typeOf(), /* isUnsigned= */ true, operand2.isConstant());
-        operand2Exp = castToExpectedType(operand2Exp, op2type, getLocation(pItem, pFileName));
-
-        // calculate the shift with the signedness of op1type
-        internalExpressionType = machineModel.applyIntegerPromotion(op1type);
-        operation = BinaryOperator.SHIFT_RIGHT;
-        break;
-      case And:
-        operation = BinaryOperator.BINARY_AND;
-        break;
-      case Or:
-        operation = BinaryOperator.BINARY_OR;
-        break;
-      case Xor:
-        operation = BinaryOperator.BINARY_XOR;
-        break;
-      default:
-        throw new AssertionError("Unhandled operation " + pOpCode);
-    }
+          case And -> BinaryOperator.BITWISE_AND;
+          case Or -> BinaryOperator.BITWISE_OR;
+          case Xor -> BinaryOperator.BITWISE_XOR;
+          default -> throw new AssertionError("Unhandled operation " + pOpCode);
+        };
 
     CBinaryExpression expression =
         new CBinaryExpression(
@@ -1254,16 +1222,16 @@ public class CFABuilder {
     FileLocation loc = getLocation(pForElement, pFileName);
     CInitializer init;
     CType canonicalType = pExpectedType.getCanonicalType();
-    if (canonicalType instanceof CArrayType) {
-      int length = ((CArrayType) canonicalType).getLengthAsInt().orElseThrow();
-      CType elementType = ((CArrayType) canonicalType).getType().getCanonicalType();
+    if (canonicalType instanceof CArrayType cArrayType) {
+      int length = cArrayType.getLengthAsInt().orElseThrow();
+      CType elementType = cArrayType.getType().getCanonicalType();
       CInitializer zeroInitializer = getZeroInitializer(pForElement, elementType, pFileName);
       List<CInitializer> initializers = Collections.nCopies(length, zeroInitializer);
       init = new CInitializerList(loc, initializers);
 
-    } else if (canonicalType instanceof CCompositeType) {
+    } else if (canonicalType instanceof CCompositeType cCompositeType) {
 
-      List<CCompositeTypeMemberDeclaration> members = ((CCompositeType) canonicalType).getMembers();
+      List<CCompositeTypeMemberDeclaration> members = cCompositeType.getMembers();
       List<CInitializer> initializers = new ArrayList<>(members.size());
       for (CCompositeTypeMemberDeclaration m : members) {
         CType memberType = m.getType();
@@ -1275,11 +1243,14 @@ public class CFABuilder {
 
     } else {
       CExpression zeroExpression;
-      if (canonicalType instanceof CSimpleType) {
-        CBasicType basicType = ((CSimpleType) canonicalType).getType();
-        if (basicType == CBasicType.FLOAT || basicType == CBasicType.DOUBLE) {
+      if (canonicalType instanceof CSimpleType cSimpleType) {
+        CBasicType basicType = cSimpleType.getType();
+        if (basicType.isFloatingPointType()) {
+          FloatValue.Format format = FloatValue.Format.fromCType(machineModel, pExpectedType);
           // use expected type for float, not canonical
-          zeroExpression = new CFloatLiteralExpression(loc, pExpectedType, BigDecimal.ZERO);
+          zeroExpression =
+              new CFloatLiteralExpression(
+                  loc, machineModel, pExpectedType, FloatValue.zero(format));
         } else {
           zeroExpression = CIntegerLiteralExpression.ZERO;
         }
@@ -1300,8 +1271,8 @@ public class CFABuilder {
       OptionalInt maybeArrayLength = arrayType.getLengthAsInt();
       assert maybeArrayLength.isPresent() : "Constant array has non-constant length";
       return maybeArrayLength.orElseThrow();
-    } else if (aggregateType instanceof CCompositeType) {
-      return ((CCompositeType) aggregateType).getMembers().size();
+    } else if (aggregateType instanceof CCompositeType cCompositeType) {
+      return cCompositeType.getMembers().size();
     } else {
       throw new AssertionError();
     }
@@ -1343,12 +1314,10 @@ public class CFABuilder {
             new CPointerExpression(getLocation(pAssignee, pFileName), varType, assigneeIdExp);
       }
 
-      if (pAssignment instanceof CFunctionCallExpression) {
+      if (pAssignment instanceof CFunctionCallExpression cFunctionCallExpression) {
         return ImmutableList.of(
             new CFunctionCallAssignmentStatement(
-                getLocation(pAssignee, pFileName),
-                assigneeIdExp,
-                (CFunctionCallExpression) pAssignment));
+                getLocation(pAssignee, pFileName), assigneeIdExp, cFunctionCallExpression));
 
       } else {
         return ImmutableList.of(
@@ -1357,7 +1326,7 @@ public class CFABuilder {
       }
 
     } else { // Variable must be newly declared
-      if (pAssignment instanceof CFunctionCallExpression) {
+      if (pAssignment instanceof CFunctionCallExpression cFunctionCallExpression) {
         CSimpleDeclaration assigneeDecl =
             getAssignedVarDeclaration(pAssignee, pFunctionName, null, pFileName);
         CLeftHandSide assigneeIdExp =
@@ -1366,9 +1335,7 @@ public class CFABuilder {
         return ImmutableList.of(
             assigneeDecl,
             new CFunctionCallAssignmentStatement(
-                getLocation(pAssignee, pFileName),
-                assigneeIdExp,
-                (CFunctionCallExpression) pAssignment));
+                getLocation(pAssignee, pFileName), assigneeIdExp, cFunctionCallExpression));
 
       } else {
         CInitializer initializer =
@@ -1451,12 +1418,11 @@ public class CFABuilder {
       }
     } else if (expressionType instanceof CPointerType) {
       return getDereference(location, expression);
-    } else if (expressionType instanceof CArrayType) {
+    } else if (expressionType instanceof CArrayType cArrayType) {
       // Pointer to an array is the pointer to the beginning of the array
       if (pExpectedType instanceof CPointerType) {
         if (isCompatible(
-            getReferencedType(pExpectedType),
-            ((CArrayType) expressionType).getType().getCanonicalType())) {
+            getReferencedType(pExpectedType), cArrayType.getType().getCanonicalType())) {
           return expression;
         }
       }
@@ -1504,11 +1470,8 @@ public class CFABuilder {
    * </ul>
    */
   private boolean pointerOf(CType pPotentialPointer, CType pPotentialPointee) {
-    return pPotentialPointer instanceof CPointerType
-        && ((CPointerType) pPotentialPointer)
-            .getType()
-            .getCanonicalType()
-            .equals(pPotentialPointee.getCanonicalType());
+    return pPotentialPointer instanceof CPointerType cPointerType
+        && cPointerType.getType().getCanonicalType().equals(pPotentialPointee.getCanonicalType());
   }
 
   private String getName(final Value pValue) {
@@ -1638,15 +1601,15 @@ public class CFABuilder {
   }
 
   private CType getPointerOfType(final CType type) {
-    return new CPointerType(false, false, type);
+    return new CPointerType(CTypeQualifiers.NONE, type);
   }
 
   private CExpression getReference(FileLocation fileLocation, CExpression expr) {
     CType exprType = expr.getExpressionType();
     // if this expression starts with *, just remove the *
-    if (expr instanceof CPointerExpression) {
-      return ((CPointerExpression) expr).getOperand();
-    } else if (expr instanceof CArraySubscriptExpression) {
+    if (expr instanceof CPointerExpression cPointerExpression) {
+      return cPointerExpression.getOperand();
+    } else if (expr instanceof CArraySubscriptExpression cArraySubscriptExpression) {
       /* this is taking an address of "array[x]", so just
        * transform it to "array + x" */
       CType type = getPointerOfType(exprType);
@@ -1654,8 +1617,8 @@ public class CFABuilder {
           fileLocation,
           type,
           type,
-          ((CArraySubscriptExpression) expr).getArrayExpression(),
-          ((CArraySubscriptExpression) expr).getSubscriptExpression(),
+          cArraySubscriptExpression.getArrayExpression(),
+          cArraySubscriptExpression.getSubscriptExpression(),
           BinaryOperator.PLUS);
     }
 
@@ -1669,9 +1632,9 @@ public class CFABuilder {
 
     /* if this is and expression starting with &,
      * just remove the & */
-    if (expr instanceof CUnaryExpression
-        && ((CUnaryExpression) expr).getOperator() == UnaryOperator.AMPER) {
-      return ((CUnaryExpression) expr).getOperand();
+    if (expr instanceof CUnaryExpression cUnaryExpression
+        && cUnaryExpression.getOperator() == UnaryOperator.AMPER) {
+      return cUnaryExpression.getOperand();
     }
 
     return new CPointerExpression(fileLocation, derefType, expr);
@@ -1729,11 +1692,11 @@ public class CFABuilder {
                 currentExpression,
                 index);
       } else if (currentType instanceof CCompositeType) {
-        if (!(index instanceof CIntegerLiteralExpression)) {
+        if (!(index instanceof CIntegerLiteralExpression cIntegerLiteralExpression)) {
           throw new UnsupportedOperationException(
               "GEP index to struct only allows integer constant, but is " + index);
         }
-        int memberIndex = ((CIntegerLiteralExpression) index).getValue().intValue();
+        int memberIndex = cIntegerLiteralExpression.getValue().intValue();
         CCompositeTypeMemberDeclaration field =
             ((CCompositeType) currentType).getMembers().get(memberIndex);
         String fieldName = field.getName();
@@ -1766,43 +1729,22 @@ public class CFABuilder {
       throws LLVMException {
     // the only one supported now
     assert pItem.isICmpInst() : "Unsupported cmp instruction: " + pItem;
-    boolean isUnsignedCmp = false;
+    IntPredicate cmpPredicate = pItem.getICmpPredicate();
 
-    BinaryOperator operator;
-    switch (pItem.getICmpPredicate()) {
-      case IntEQ:
-        operator = BinaryOperator.EQUALS;
-        break;
-      case IntNE:
-        operator = BinaryOperator.NOT_EQUALS;
-        break;
-      case IntUGT:
-        isUnsignedCmp = true;
-      // $FALL-THROUGH$
-      case IntSGT:
-        operator = BinaryOperator.GREATER_THAN;
-        break;
-      case IntULT:
-        isUnsignedCmp = true;
-      // $FALL-THROUGH$
-      case IntSLT:
-        operator = BinaryOperator.LESS_THAN;
-        break;
-      case IntULE:
-        isUnsignedCmp = true;
-      // $FALL-THROUGH$
-      case IntSLE:
-        operator = BinaryOperator.LESS_EQUAL;
-        break;
-      case IntUGE:
-        isUnsignedCmp = true;
-      // $FALL-THROUGH$
-      case IntSGE:
-        operator = BinaryOperator.GREATER_EQUAL;
-        break;
-      default:
-        throw new UnsupportedOperationException("Unsupported predicate");
-    }
+    BinaryOperator operator =
+        switch (cmpPredicate) {
+          case IntEQ -> BinaryOperator.EQUALS;
+          case IntNE -> BinaryOperator.NOT_EQUALS;
+          case IntUGT, IntSGT -> BinaryOperator.GREATER_THAN;
+          case IntULT, IntSLT -> BinaryOperator.LESS_THAN;
+          case IntULE, IntSLE -> BinaryOperator.LESS_EQUAL;
+          case IntUGE, IntSGE -> BinaryOperator.GREATER_EQUAL;
+        };
+    final boolean isUnsignedCmp =
+        switch (cmpPredicate) {
+          case IntUGT, IntULT, IntULE, IntUGE -> true;
+          default -> false;
+        };
 
     assert operator != null;
     Value operand1 = pItem.getOperand(0);
