@@ -89,16 +89,15 @@ public class ThreadCreateTransformer {
 
     @Override
     public TraversalProcess visitEdge(CFAEdge pEdge) {
-      if (pEdge instanceof CStatementEdge) {
-        CStatement statement = ((CStatementEdge) pEdge).getStatement();
-        if (statement instanceof CAssignment) {
-          CRightHandSide rhs = ((CAssignment) statement).getRightHandSide();
+      if (pEdge instanceof CStatementEdge cStatementEdge) {
+        CStatement statement = cStatementEdge.getStatement();
+        if (statement instanceof CAssignment cAssignment) {
+          CRightHandSide rhs = cAssignment.getRightHandSide();
           if (rhs instanceof CFunctionCallExpression exp) {
             checkFunctionExpression(pEdge, exp);
           }
-        } else if (statement instanceof CFunctionCallStatement) {
-          CFunctionCallExpression exp =
-              ((CFunctionCallStatement) statement).getFunctionCallExpression();
+        } else if (statement instanceof CFunctionCallStatement cFunctionCallStatement) {
+          CFunctionCallExpression exp = cFunctionCallStatement.getFunctionCallExpression();
           checkFunctionExpression(pEdge, exp);
         }
       }
@@ -135,7 +134,7 @@ public class ThreadCreateTransformer {
       CFATraversal.dfs().traverseOnce(functionStartNode, threadVisitor);
     }
 
-    // We need to repeat this loop several times, because we traverse that part cfa, which is
+    // We need to repeat this loop several times, because we traverse that partial CFA, which is
     // reachable from main
     for (Entry<CFAEdge, CFunctionCallExpression> entry : threadVisitor.threadCreates.entrySet()) {
       CFAEdge edge = entry.getKey();
@@ -174,9 +173,9 @@ public class ThreadCreateTransformer {
           new CThreadCreateStatement(
               pFileLocation, pFunctionCallExpression, isSelfParallel, varName.getName());
 
-      if (edge instanceof CStatementEdge) {
-        CStatement stmnt = ((CStatementEdge) edge).getStatement();
-        if (stmnt instanceof CFunctionCallAssignmentStatement) {
+      if (edge instanceof CStatementEdge cStatementEdge) {
+        CStatement stmnt = cStatementEdge.getStatement();
+        if (stmnt instanceof CFunctionCallAssignmentStatement cFunctionCallAssignmentStatement) {
           /* We should replace r = pthread_create(f) into
            *   - r = TMP;
            *   - [r == 0]
@@ -193,11 +192,11 @@ public class ThreadCreateTransformer {
 
           CFACreationUtils.removeEdgeFromNodes(edge);
 
-          CStatement assign = prepareRandomAssignment((CFunctionCallAssignmentStatement) stmnt);
+          CStatement assign = prepareRandomAssignment(cFunctionCallAssignmentStatement);
           CStatementEdge randAssign =
               new CStatementEdge(pRawStatement, assign, pFileLocation, pPredecessor, firstNode);
 
-          CExpression assumption = prepareAssumption((CFunctionCallAssignmentStatement) stmnt, cfa);
+          CExpression assumption = prepareAssumption(cFunctionCallAssignmentStatement, cfa);
           CAssumeEdge trueEdge =
               new CAssumeEdge(
                   pRawStatement, pFileLocation, firstNode, secondNode, assumption, true);
@@ -285,19 +284,18 @@ public class ThreadCreateTransformer {
   }
 
   private CIdExpression getFunctionName(CExpression fName) {
-    if (fName instanceof CIdExpression) {
-      return (CIdExpression) fName;
-    } else if (fName instanceof CUnaryExpression) {
-      return getFunctionName(((CUnaryExpression) fName).getOperand());
-    } else if (fName instanceof CCastExpression) {
-      return getFunctionName(((CCastExpression) fName).getOperand());
-    } else {
-      throw new UnsupportedOperationException("Unsupported expression in pthread_create: " + fName);
-    }
+    return switch (fName) {
+      case CIdExpression cIdExpression -> cIdExpression;
+      case CUnaryExpression cUnaryExpression -> getFunctionName(cUnaryExpression.getOperand());
+      case CCastExpression cCastExpression -> getFunctionName(cCastExpression.getOperand());
+      default ->
+          throw new UnsupportedOperationException(
+              "Unsupported expression in pthread_create: " + fName);
+    };
   }
 
   private CIdExpression getThreadVariableName(CFunctionCallExpression fCall) {
-    CExpression var = fCall.getParameterExpressions().get(0);
+    CExpression var = fCall.getParameterExpressions().getFirst();
 
     while (!(var instanceof CIdExpression)) {
       if (var instanceof CUnaryExpression) {
