@@ -9,6 +9,7 @@
 package org.sosy_lab.cpachecker.cfa.types.c;
 
 import static com.google.common.truth.Truth.assertThat;
+import static org.sosy_lab.cpachecker.cfa.types.c.CTypesTest.CONST_VOLATILE_INT;
 
 import com.google.common.collect.ImmutableList;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
@@ -36,119 +37,145 @@ public class CTypeToStringTest {
 
   private static final String VAR = "var";
 
-  private static final CType CONST_VOLATILE_INT =
-      new CSimpleType(true, true, CBasicType.INT, false, false, false, false, false, false, false);
-
   @Parameters(name = "{0} [{1}]")
   @SuppressWarnings("checkstyle:NoWhitespaceAfter") // nicely readable in this special case
   public static Object[][] types() {
     return new Object[][] {
+      {
+        "int var", CNumericTypes.INT,
+      },
+      {
+        "_Atomic int var", CNumericTypes.INT.withQualifiersSetTo(CTypeQualifiers.ATOMIC),
+      },
+      {
+        "const int var", CNumericTypes.INT.withQualifiersSetTo(CTypeQualifiers.CONST),
+      },
+      {
+        "volatile int var", CNumericTypes.INT.withQualifiersSetTo(CTypeQualifiers.VOLATILE),
+      },
+      {
+        "_Atomic const int var",
+        CNumericTypes.INT.withQualifiersSetTo(CTypeQualifiers.ATOMIC_CONST),
+      },
+      {
+        "_Atomic volatile int var",
+        CNumericTypes.INT.withQualifiersSetTo(CTypeQualifiers.ATOMIC_VOLATILE),
+      },
+      {
+        "const volatile int var",
+        CNumericTypes.INT.withQualifiersSetTo(CTypeQualifiers.CONST_VOLATILE),
+      },
+      {
+        "_Atomic const volatile int var",
+        CNumericTypes.INT.withQualifiersSetTo(CTypeQualifiers.ATOMIC_CONST_VOLATILE),
+      },
+      {
+        "_Atomic int *var", new CPointerType(CTypeQualifiers.NONE, CNumericTypes.INT.withAtomic()),
+      },
       { // declare var as pointer to int
-        "int *var", new CPointerType(false, false, CNumericTypes.INT),
+        "int *var", new CPointerType(CTypeQualifiers.NONE, CNumericTypes.INT),
       },
       { // declare var as const volatile pointer to int
-        "int * const volatile var", new CPointerType(true, true, CNumericTypes.INT),
+        "int *const volatile var",
+        new CPointerType(CTypeQualifiers.CONST_VOLATILE, CNumericTypes.INT),
       },
       { // declare var as pointer to const volatile int
-        "const volatile int *var", new CPointerType(false, false, CONST_VOLATILE_INT),
+        "const volatile int *var", new CPointerType(CTypeQualifiers.NONE, CONST_VOLATILE_INT),
       },
       { // declare var as const volatile pointer to const volatile int
-        "const volatile int * const volatile var", new CPointerType(true, true, CONST_VOLATILE_INT),
+        "const volatile int *const volatile var",
+        new CPointerType(CTypeQualifiers.CONST_VOLATILE, CONST_VOLATILE_INT),
       },
       { // declare var as array 1 of int
         "int var[1]",
-        new CArrayType(false, false, CNumericTypes.INT, CIntegerLiteralExpression.ONE),
+        new CArrayType(CTypeQualifiers.NONE, CNumericTypes.INT, CIntegerLiteralExpression.ONE),
       },
       { // not possible to specify directly, but with typedefs
         "const volatile int var[1]",
-        new CArrayType(true, true, CNumericTypes.INT, CIntegerLiteralExpression.ONE),
+        new CArrayType(
+            CTypeQualifiers.CONST_VOLATILE, CNumericTypes.INT, CIntegerLiteralExpression.ONE),
       },
       { // declare var as array 1 of const volatile int
         "const volatile int var[1]",
-        new CArrayType(false, false, CONST_VOLATILE_INT, CIntegerLiteralExpression.ONE),
+        new CArrayType(CTypeQualifiers.NONE, CONST_VOLATILE_INT, CIntegerLiteralExpression.ONE),
       },
       { // not possible to specify directly, but with typedefs
         "const volatile const volatile int var[1]",
-        new CArrayType(true, true, CONST_VOLATILE_INT, CIntegerLiteralExpression.ONE),
+        new CArrayType(
+            CTypeQualifiers.CONST_VOLATILE, CONST_VOLATILE_INT, CIntegerLiteralExpression.ONE),
       },
       { // declare var as array 1 of pointer to int
         "int *var[1]",
         new CArrayType(
-            false,
-            false,
-            new CPointerType(false, false, CNumericTypes.INT),
+            CTypeQualifiers.NONE,
+            new CPointerType(CTypeQualifiers.NONE, CNumericTypes.INT),
             CIntegerLiteralExpression.ONE),
       },
       { // declare var as array 1 of const volatile pointer to int
-        "int * const volatile var[1]",
+        "int *const volatile var[1]",
         new CArrayType(
-            false,
-            false,
-            new CPointerType(true, true, CNumericTypes.INT),
+            CTypeQualifiers.NONE,
+            new CPointerType(CTypeQualifiers.CONST_VOLATILE, CNumericTypes.INT),
             CIntegerLiteralExpression.ONE),
       },
       { // declare var as array 1 of pointer to const volatile int
         "const volatile int *var[1]",
         new CArrayType(
-            false,
-            false,
-            new CPointerType(false, false, CONST_VOLATILE_INT),
+            CTypeQualifiers.NONE,
+            new CPointerType(CTypeQualifiers.NONE, CONST_VOLATILE_INT),
             CIntegerLiteralExpression.ONE),
       },
       { // declare var as array 1 of const volatile pointer to const volatile int
-        "const volatile int * const volatile var[1]",
+        "const volatile int *const volatile var[1]",
         new CArrayType(
-            false,
-            false,
-            new CPointerType(true, true, CONST_VOLATILE_INT),
+            CTypeQualifiers.NONE,
+            new CPointerType(CTypeQualifiers.CONST_VOLATILE, CONST_VOLATILE_INT),
             CIntegerLiteralExpression.ONE),
       },
       { // declare var as pointer to array 1 of int
         "int (*var)[1]",
         new CPointerType(
-            false,
-            false,
-            new CArrayType(false, false, CNumericTypes.INT, CIntegerLiteralExpression.ONE)),
+            CTypeQualifiers.NONE,
+            new CArrayType(CTypeQualifiers.NONE, CNumericTypes.INT, CIntegerLiteralExpression.ONE)),
       },
       { // declare var as const volatile pointer to array 1 of int
-        "int (* const volatile var)[1]",
+        "int (*const volatile var)[1]",
         new CPointerType(
-            true,
-            true,
-            new CArrayType(false, false, CNumericTypes.INT, CIntegerLiteralExpression.ONE)),
+            CTypeQualifiers.CONST_VOLATILE,
+            new CArrayType(CTypeQualifiers.NONE, CNumericTypes.INT, CIntegerLiteralExpression.ONE)),
       },
       { // declare var as pointer to array 1 of const volatile int
         "const volatile int (*var)[1]",
         new CPointerType(
-            false,
-            false,
-            new CArrayType(false, false, CONST_VOLATILE_INT, CIntegerLiteralExpression.ONE)),
+            CTypeQualifiers.NONE,
+            new CArrayType(
+                CTypeQualifiers.NONE, CONST_VOLATILE_INT, CIntegerLiteralExpression.ONE)),
       },
       { // declare var as const volatile pointer to array 1 of const volatile int
-        "const volatile int (* const volatile var)[1]",
+        "const volatile int (*const volatile var)[1]",
         new CPointerType(
-            true,
-            true,
-            new CArrayType(false, false, CONST_VOLATILE_INT, CIntegerLiteralExpression.ONE)),
+            CTypeQualifiers.CONST_VOLATILE,
+            new CArrayType(
+                CTypeQualifiers.NONE, CONST_VOLATILE_INT, CIntegerLiteralExpression.ONE)),
       },
       { // declare var as function (int) returning pointer to double
         "double *var(int)",
         new CFunctionType(
-            new CPointerType(false, false, CNumericTypes.DOUBLE),
+            new CPointerType(CTypeQualifiers.NONE, CNumericTypes.DOUBLE),
             ImmutableList.of(CNumericTypes.INT),
             false),
       },
       { // declare var as function (int) returning const volatile pointer to double
-        "double * const volatile var(int)",
+        "double *const volatile var(int)",
         new CFunctionType(
-            new CPointerType(true, true, CNumericTypes.DOUBLE),
+            new CPointerType(CTypeQualifiers.CONST_VOLATILE, CNumericTypes.DOUBLE),
             ImmutableList.of(CNumericTypes.INT),
             false),
       },
       { // declare var as function (int) returning pointer to double
         "double *var(int)",
         new CFunctionType(
-            new CPointerType(false, false, CNumericTypes.DOUBLE),
+            new CPointerType(CTypeQualifiers.NONE, CNumericTypes.DOUBLE),
             ImmutableList.of(CNumericTypes.INT),
             false),
       },
@@ -156,19 +183,17 @@ public class CTypeToStringTest {
         "void (*var(int))(double)",
         new CFunctionType(
             new CPointerType(
-                false,
-                false,
+                CTypeQualifiers.NONE,
                 new CFunctionType(CVoidType.VOID, ImmutableList.of(CNumericTypes.DOUBLE), false)),
             ImmutableList.of(CNumericTypes.INT),
             false),
       },
       { // declare var as function (int) returning const volatile pointer to function (double)
         // returning void
-        "void (* const volatile var(int))(double)",
+        "void (*const volatile var(int))(double)",
         new CFunctionType(
             new CPointerType(
-                true,
-                true,
+                CTypeQualifiers.CONST_VOLATILE,
                 new CFunctionType(CVoidType.VOID, ImmutableList.of(CNumericTypes.DOUBLE), false)),
             ImmutableList.of(CNumericTypes.INT),
             false),
@@ -178,10 +203,9 @@ public class CTypeToStringTest {
         "char *(*var(int))(double)",
         new CFunctionType(
             new CPointerType(
-                false,
-                false,
+                CTypeQualifiers.NONE,
                 new CFunctionType(
-                    new CPointerType(false, false, CNumericTypes.CHAR),
+                    new CPointerType(CTypeQualifiers.NONE, CNumericTypes.CHAR),
                     ImmutableList.of(CNumericTypes.DOUBLE),
                     false)),
             ImmutableList.of(CNumericTypes.INT),
@@ -220,7 +244,7 @@ public class CTypeToStringTest {
             parser
                 .parseString(Path.of("dummy"), stringRepr + ";")
                 .globalDeclarations()
-                .get(0)
+                .getFirst()
                 .getFirst()
                 .getType();
     assertThat(parsed.getCanonicalType()).isEqualTo(type.getCanonicalType());
