@@ -20,7 +20,6 @@ import com.google.common.collect.ArrayListMultimap;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.ImmutableSetMultimap;
-import com.google.common.collect.Iterables;
 import com.google.common.collect.ListMultimap;
 import com.google.common.collect.Maps;
 import com.google.common.collect.MultimapBuilder;
@@ -174,23 +173,24 @@ public class PredicateAbstractionRefinementStrategy extends RefinementStrategy
   private final PredicateMapWriter precisionWriter;
 
   // statistics
-  private StatCounter numberOfRefinementsWithStrategy2 =
+  private final StatCounter numberOfRefinementsWithStrategy2 =
       new StatCounter("Number of refs with location-based cutoff");
-  private StatInt irrelevantPredsInItp =
+  private final StatInt irrelevantPredsInItp =
       new StatInt(StatKind.SUM, "Number of irrelevant preds in interpolants");
 
-  private StatTimer predicateCreation = new StatTimer(StatKind.SUM, "Predicate creation");
-  private StatTimer precisionUpdate = new StatTimer(StatKind.SUM, "Precision update");
-  protected StatTimer argUpdate = new StatTimer(StatKind.SUM, "ARG update");
-  private StatTimer itpSimplification = new StatTimer(StatKind.SUM, "Itp simplification with BDDs");
+  private final StatTimer predicateCreation = new StatTimer(StatKind.SUM, "Predicate creation");
+  private final StatTimer precisionUpdate = new StatTimer(StatKind.SUM, "Precision update");
+  protected final StatTimer argUpdate = new StatTimer(StatKind.SUM, "ARG update");
+  private final StatTimer itpSimplification =
+      new StatTimer(StatKind.SUM, "Itp simplification with BDDs");
 
-  private StatInt simplifyDeltaConjunctions = new StatInt(StatKind.SUM, "Conjunctions Delta");
-  private StatInt simplifyDeltaDisjunctions = new StatInt(StatKind.SUM, "Disjunctions Delta");
-  private StatInt simplifyDeltaNegations = new StatInt(StatKind.SUM, "Negations Delta");
-  private StatInt simplifyDeltaAtoms = new StatInt(StatKind.SUM, "Atoms Delta");
-  private StatInt simplifyDeltaVariables = new StatInt(StatKind.SUM, "Variables Delta");
-  private StatInt simplifyVariablesBefore = new StatInt(StatKind.SUM, "Variables Before");
-  private StatInt simplifyVariablesAfter = new StatInt(StatKind.SUM, "Variables After");
+  private final StatInt simplifyDeltaConjunctions = new StatInt(StatKind.SUM, "Conjunctions Delta");
+  private final StatInt simplifyDeltaDisjunctions = new StatInt(StatKind.SUM, "Disjunctions Delta");
+  private final StatInt simplifyDeltaNegations = new StatInt(StatKind.SUM, "Negations Delta");
+  private final StatInt simplifyDeltaAtoms = new StatInt(StatKind.SUM, "Atoms Delta");
+  private final StatInt simplifyDeltaVariables = new StatInt(StatKind.SUM, "Variables Delta");
+  private final StatInt simplifyVariablesBefore = new StatInt(StatKind.SUM, "Variables Before");
+  private final StatInt simplifyVariablesAfter = new StatInt(StatKind.SUM, "Variables After");
 
   private class Stats implements Statistics {
     @Override
@@ -225,7 +225,7 @@ public class PredicateAbstractionRefinementStrategy extends RefinementStrategy
     }
   }
 
-  public PredicateAbstractionRefinementStrategy(
+  protected PredicateAbstractionRefinementStrategy(
       final Configuration config,
       final LogManager pLogger,
       final PredicateAbstractionManager pPredAbsMgr,
@@ -489,7 +489,7 @@ public class PredicateAbstractionRefinementStrategy extends RefinementStrategy
       ARGState root = (ARGState) reached.getFirstState();
       // we have to use the child as the refinementRoot
       assert root.getChildren().size() == 1 : "ARG root should have exactly one child";
-      refinementRoot = Iterables.getLast(root.getChildren());
+      refinementRoot = root.getChildren().getLast();
 
       logger.log(
           Level.FINEST,
@@ -591,7 +591,7 @@ public class PredicateAbstractionRefinementStrategy extends RefinementStrategy
       newPredicatesFound = true;
     }
 
-    ARGState firstInterpolationPoint = pAffectedStates.get(0);
+    ARGState firstInterpolationPoint = pAffectedStates.getFirst();
     if (!newPredicatesFound) {
       if (pRepeatedCounterexample) {
         throw new RefinementFailedException(
@@ -613,7 +613,7 @@ public class PredicateAbstractionRefinementStrategy extends RefinementStrategy
       // this is not necessary equal to firstInterpolationPoint
       ARGState current = firstInterpolationPoint;
       while (!current.getParents().isEmpty()) {
-        current = Iterables.get(current.getParents(), 0);
+        current = current.getParents().getFirst();
 
         if (getPredicateState(current).isAbstractionState()) {
           CFANode loc = AbstractStates.extractLocation(current);
