@@ -34,6 +34,7 @@ import org.sosy_lab.cpachecker.cpa.smg2.util.value.ValueAndSMGState;
 import org.sosy_lab.cpachecker.cpa.value.symbolic.type.ConstantSymbolicExpression;
 import org.sosy_lab.cpachecker.cpa.value.symbolic.type.SymbolicExpression;
 import org.sosy_lab.cpachecker.cpa.value.symbolic.type.SymbolicIdentifier;
+import org.sosy_lab.cpachecker.cpa.value.type.NumericValue;
 import org.sosy_lab.cpachecker.cpa.value.type.Value;
 import org.sosy_lab.cpachecker.util.smg.SMG;
 import org.sosy_lab.cpachecker.util.smg.datastructures.PersistentSet;
@@ -488,7 +489,7 @@ public class SMGCPAMaterializer {
     }
 
     // TODO: problem, on 1+ we might have first and last ptrs (and all), but never want to switch
-    // the last and all pointer to an concrete element for the extended list (this case), but
+    // the last and all pointer to a concrete element for the extended list (this case), but
     // switch it to the 0+
     // Create the now smaller abstracted list
     SMGObjectAndSMGState newAbsListSegAndState =
@@ -572,11 +573,9 @@ public class SMGCPAMaterializer {
                 !e.hasValue().isZero()
                     && smg.isPointer(e.hasValue())
                     && smg.getPTEdge(e.hasValue()).orElseThrow().pointsTo().equals(newAbsListSeg)
-                    && smg.getPTEdge(e.hasValue()).orElseThrow().getOffset().isNumericValue()
-                    && smg.getPTEdge(e.hasValue())
-                        .orElseThrow()
-                        .getOffset()
-                        .asNumericValue()
+                    && smg.getPTEdge(e.hasValue()).orElseThrow().getOffset()
+                        instanceof NumericValue numPtrOffset
+                    && numPtrOffset
                         .bigIntegerValue()
                         .equals(
                             ((SMGDoublyLinkedListSegment) newAbsListSeg)
@@ -823,11 +822,9 @@ public class SMGCPAMaterializer {
               currentState.getMemoryModel().getSmg().getPTEdge(smgValue).orElseThrow();
           Value oldOffset = oldPTE.getOffset();
           Preconditions.checkArgument(
-              targetMemoryAndState
-                  .getOffsetForObject()
-                  .asNumericValue()
-                  .bigIntegerValue()
-                  .equals(oldOffset.asNumericValue().bigIntegerValue()));
+              targetMemoryAndState.getOffsetForObject() instanceof NumericValue targetOffset
+                  && oldOffset instanceof NumericValue numOldOffset
+                  && targetOffset.bigIntegerValue().equals(numOldOffset.bigIntegerValue()));
           int oldPtrNestingLvl = currentState.getMemoryModel().getNestingLevel(value);
           SMGTargetSpecifier oldPtrTargetSpec = oldPTE.targetSpecifier();
           if (!(newTarget instanceof SMGSinglyLinkedListSegment)) {
@@ -1045,7 +1042,7 @@ public class SMGCPAMaterializer {
       return false;
     }
     Collections.reverse(listOfObjects);
-    return checkList(listOfObjects.get(0), pfo, listOfObjects, currentState);
+    return checkList(listOfObjects.getFirst(), pfo, listOfObjects, currentState);
   }
 
   // Check that the pointers of a list are correct for last pointer materialization
@@ -1116,8 +1113,8 @@ public class SMGCPAMaterializer {
     SMGAndHasValueEdges readValue =
         smg.readValue(pNewAbsListSeg, nfo, smg.getSizeOfPointer(), false);
     if (readValue.getHvEdges().size() != 1
-        || !smg.isPointer(readValue.getHvEdges().get(0).hasValue())
-        || !smg.getPTEdge(readValue.getHvEdges().get(0).hasValue())
+        || !smg.isPointer(readValue.getHvEdges().getFirst().hasValue())
+        || !smg.getPTEdge(readValue.getHvEdges().getFirst().hasValue())
             .orElseThrow()
             .pointsTo()
             .equals(newConcreteRegion)) {
